8167457: Fixes for InetAddressImpl native coding on Windows

Reviewed-by: michaelm